# tekpy

./: LICENSE.txt  README.md  pyproject.toml
src/tekpy/: __init__.py  circuit.py  econ.py  workflow.py
src/tekpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
